--- a/contact.html
+++ b/contact.html
@@ -22,9 +22,9 @@
     </body> 
     </br>
     <H1 >Welcome to Michael Joseph James' Portfolio</H1>
-<div id="mainContact"><img src="./assets/Ole%20timey%20mike.png" alt="Michael Joseph James" id="contact"></br></br></br></br>Phone: (306)320-7147 </br></br> <a href="mailto:mikeJoseph James@gmail.com">mikeJoseph James@gmail.com</a></br></br>
+<div id="mainContact"><img src="./assets/Mike.jpg" alt="Michael Joseph James" id="contact"></br></br></br></br>Phone: (226)503-4275 </br></br> <a href="mailto:mikeloiselle@gmail.com">mikeloiselle@gmail.com</a></br></br>
 <button  ><a id="resume" href = "assets/MikeJoseph James.pdf">Download Resume</a></button></div>
 
-<footer>©Michael Joseph James 2021.</footer>
+<footer>©Michael Joseph James 2025.</footer>
 </body>
 </html>
