--- a/gallery.html
+++ b/gallery.html
@@ -60,13 +60,13 @@
 <body>
 
 <div class="main-image">
-  <img id="displayImage" src="./assets/cars/Mitsubishi.png" alt="Main" />
+  <img id="displayImage" src="./assets/Mitsubishi.png" alt="Main" />
 </div>
 
 <div class="swiper">
   <div class="swiper-wrapper">
-    <div class="swiper-slide"><img src="./assetsMitsubishi.png" data-full="./assets/Mitsubishi.png" /></div>
-     <div class="swiper-slide"><img src="./assetsAcura.png" data-full="./assets/Acura.png" /></div>
+    <div class="swiper-slide"><img src="./assets/Mitsubishi.png" data-full="./assets/Mitsubishi.png" /></div>
+     <div class="swiper-slide"><img src="./assets/Acura.png" data-full="./assets/Acura.png" /></div>
 
 </div>
 
@@ -101,3 +101,4 @@
 
 </body>
 </html>
+
