--- a/gallery.html
+++ b/gallery.html
@@ -67,6 +67,7 @@
   <div class="swiper-wrapper">
     <div class="swiper-slide"><img src="./assets/Mitsubishi.png" data-full="./assets/Mitsubishi.png" /></div>
      <div class="swiper-slide"><img src="./assets/Acura.png" data-full="./assets/Acura.png" /></div>
+    <div class="swiper-slide"><img src="./assets/Rav4.png" data-full="./assets/Rav4.png" /></div>
 
 </div>
 
@@ -101,4 +102,5 @@
 
 </body>
 </html>
+
 
