--- a/gallery.html
+++ b/gallery.html
@@ -68,6 +68,7 @@
     <div class="swiper-slide"><img src="./assets/Mitsubishi.png" data-full="./assets/Mitsubishi.png" /></div>
      <div class="swiper-slide"><img src="./assets/Acura.png" data-full="./assets/Acura.png" /></div>
     <div class="swiper-slide"><img src="./assets/Rav4.png" data-full="./assets/Rav4.png" /></div>
+    <div class="swiper-slide"><img src="./assets/Rav4.png" data-full="./assets/Ford.png" /></div>
     <div class="swiper-slide"><img src="./assets/Orin.png" data-full="./assets/Orin.png" /></div>
 
 </div>
@@ -103,6 +104,7 @@
 
 </body>
 </html>
+
 
 
 
