--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
 
   <title>Michael Joseph James </title>
   <meta name="Michael Joseph James">
-  <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="./css/test.css">
 
 
 
@@ -14,16 +14,31 @@
 
 <body>
     
-    <ul id="topnav">
-      <li ><a class="navBar" href="index.html">Home</a></li>
-      <li><a class="navBar" href="projects.html">Projects</a></li>
-      <li><a class="navBar"href="contact.html">Contacts</a></li>
-      </ul>
+<nav class="navbar">
+<div class="brand-title">Michael Loiselle</div>
+<a href="#" class="toggle-button">
+<span class="bar"></span>
+<span class="bar"></span>
+<span class="bar"></span>
+</a>
+<div class="navbar-links">
+<ul>
+<li><a href="index.html">Home</a></li>
+<li><a href="projects.html">Projects</a></li>
+<li><a href="contact.html">Contact</a></li>
+</ul>
+</div>
+</nav>
     </body> 
     </br>
-    <H1 >Welcome to Michael Joseph James' Portfolio</H1>
-<div id="mainContact"><img src="./assets/Mike.jpg" alt="Michael Joseph James" id="contact"></br></br></br></br>Phone: (226)503-4275 </br></br> <a href="mailto:mikeloiselle@gmail.com">mikeloiselle@gmail.com</a></br></br>
-<button  ><a id="resume" href = "assets/MikeJoseph James.pdf">Download Resume</a></button></div>
+    <main>
+    <H1>Welcome to Mike Loiselle's Portfolio</H1>
+
+  
+  <p><img border: 0px; src="./assets/profile.jpg" alt="Michael Joseph James" id="contact"></br></br></br></br>Phone: (226)503-4275 </br></br> <a href="mailto:mikeloiselle@gmail.com">mikeloiselle@gmail.com</a></br></br>
+<button  ><a id="resume" href = "assets/MikeJoseph James.pdf">Download Resume</a></button></p>
+
+</main>
 
 <footer>©Michael Joseph James 2025.</footer>
 </body>
