--- a/example1.html
+++ b/example1.html
@@ -6,23 +6,33 @@
 
   <title>Michael Joseph James </title>
   <meta name="Michael Joseph James">
-  <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="./css/test.css">
 
 
 </head>
 
 <body>
  
-    <ul id="topnav">
-      <li ><a class="navBar" href="index.html">Home</a></li>
-      <li><a class="navBar" href="projects.html">Projects</a></li>
-      <li><a class="navBar"href="contact.html">Contacts</a></li>
-      </ul>
+ <nav class="navbar">
+<div class="brand-title">Michael Loiselle</div>
+<a href="#" class="toggle-button">
+<span class="bar"></span>
+<span class="bar"></span>
+<span class="bar"></span>
+</a>
+<div class="navbar-links">
+<ul>
+<li><a href="index.html">Home</a></li>
+<li><a href="projects.html">Projects</a></li>
+<li><a href="contact.html">Contact</a></li>
+</ul>
+</div>
+</nav>
     </body> 
     </br>
-    <H1>Welcome to Michael Joseph James' Portfolio</H1>
+    <H1>Welcome to Mike Loiselle's Portfolio</H1>
 <div id="main"><h2 id="h2title">Data Type Basic</h2><p>Every programming language includes the ability to save variables.</br></br> <i><u>What is a variable you might ask?</u></i></br></br> A variable is the ability to store, recall and manipulate data within a program or process. Once data has been defined it can quickly be recalled and change to meet the users needs. </br></br> <i><u>What date types are available to programmers?</u></i></br></br>Programmers have the ability to save Numbers, Strings(words), Booleon (yes/no) and Arrays (a collection of variables)</p><p><h2 id="h2title">Examples of using variables in programming</h2> Please enter you name in the text box.</br>Afterwards please click submit.</br>  <input type="text" id="fname" name="fname"><input type="submit" onclick="display()"><br><p></p><br></p></div>
-<footer>©Michael Joseph James 2025.</footer>
+<footer id="footer"></footer>
 
 <script>
      function display(){
@@ -31,6 +41,12 @@
          document.getElementById("main").innerHTML += "Hello " + name + "</br>" + "Thank you for your input. </br> We just assigned a variable using a function and were able to output it to the screen";
         
     }
+    const newDate  = new Date();
+    //let year = newDate.getFullYear();
+    let year = 4325;
+    document.getElementById("footer").innerHTML = "©Michael Joseph James " + year;
 </script>
+
+
 </body>
 </html>
