--- a/example4.html
+++ b/example4.html
@@ -20,7 +20,7 @@
       </ul>
     </body> 
     </br>
-    <H1>Welcome to Michael Joseph James' Portfolio</H1>
+    <H1>Welcome to Mike Loiselle's Portfolio</H1>
     <div id="main"><h2>Purpose: PHP Forms</h2><p>The purpose of this example is to show how forms are used to collect data from visitors. Forms are used to collect simple information such as name, address, phone # and other information. Using PHP we will store this information and show how it can be used in order processing.</p><h2>Lets start with HTML and go from there</h2><p>The most basic form will collect customer information. Below is an example of how this will look.</p> <h3 id="h3ex">Press F12 on chrome to view the elements that make up a form</h3>
    <form action="/.example4.php">
   <label for="fname">First name:</label><br>
