--- a/example8.html
+++ b/example8.html
@@ -20,7 +20,7 @@ v<!doctype html>
       </ul>
     </body> 
     </br>
-    <H1>Welcome to Michael Joseph James' Portfolio</H1>
+    <H1>Welcome to Mike Loiselle's Portfolio</H1>
     <div id="main">
         
     </div>
