--- a/projects.html
+++ b/projects.html
@@ -6,33 +6,45 @@
 
   <title>Michael Joseph James </title>
   <meta name="Michael Joseph James">
-  <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="./css/test.css">
 
 
 </head>
 
 <body>
  
-    <ul id="topnav">
-      <li ><a class="navBar" href="index.html">Home</a></li>
-      <li><a class="navBar" href="projects.html">Projects</a></li>
-      <li><a class="navBar"href="contact.html">Contacts</a></li>
-      </ul>
+<nav class="navbar">
+<div class="brand-title">Michael Loiselle</div>
+<a href="#" class="toggle-button">
+<span class="bar"></span>
+<span class="bar"></span>
+<span class="bar"></span>
+</a>
+<div class="navbar-links">
+<ul>
+<li><a href="index.html">Home</a></li>
+<li><a href="projects.html">Projects</a></li>
+<li><a href="contact.html">Contact</a></li>
+</ul>
+</div>
+</nav>
     </body> 
     </br>
-    <H1>Welcome to Michael Joseph James' Portfolio</H1>
+    <main>
+    <h1>Welcome to Mike Loiselle's Portfolio</h1>
     <div id="main">
       <ul>
         <li class="project"><a href="example1.html">The Basics: Data Types (Work in Progress)</a></br></li>
         <li class="project"><a href="example2.html"> Project 1: Pen and Paper RPG generator (Work in Progress)</a></br></li>
         <li class="project"><a href="example3.html" >Project 2: Slot Machine</a></br></li>
         <li class="project"><a href="" >Project 3: PHP Forms</a></br></li>
-        <li class="project"><a href="example5.html" >Project 4: Video Game Review</a></br></li>
-        <li class="project"><a href="example6.html" >Project 5: News Article</a></br></li>
+       <!-- <li class="project"><a href="example5.html" >Project 4: Video Game Review</a></br></li> -->
+        <li class="project"><a href="example5.html" >Project 5: News Article</a></br></li>
         <li class="project"><a href="" >Project 6: Pen and Paper RPG Generator with PHP Database</a></br></li>
-        <li class="project"><a href="example8.html" >Project 7: Playing Cards</a></br></li>
+       <!--  <li class="project"><a href="example8.html" >Project 7: Playing Cards</a></br></li> -->
       </ul> 
     </div>
+    </main>
     
 <footer>©Michael Joseph James 2025.</footer>
 </body>
