--- a/gallery.html
+++ b/gallery.html
@@ -65,8 +65,12 @@
 
 <div class="swiper">
   <div class="swiper-wrapper">
-    <div class="swiper-slide"><img src="./assetsMitsubishi.png" data-full="./assets/Mitsubishi.png" /></div>
-     <div class="swiper-slide"><img src="./assetsAcura.png" data-full="./assets/Acura.png" /></div>
+    <div class="swiper-slide"><img src="./assets/Mitsubishi.png" data-full="./assets/Mitsubishi.png" /></div>
+     <div class="swiper-slide"><img src="./assets/Acura.png" data-full="./assets/Acura.png" /></div>
+    <div class="swiper-slide"><img src="./assets/Stang.png" data-full="./assets/Stang.png" /></div>
+    <div class="swiper-slide"><img src="./assets/Rav4.png" data-full="./assets/Rav4.png" /></div>
+    <div class="swiper-slide"><img src="./assets/Ford.png" data-full="./assets/Ford.png" /></div>
+    <div class="swiper-slide"><img src="./assets/Orin.png" data-full="./assets/Orin.png" /></div>
 
 </div>
 
@@ -101,3 +105,7 @@
 
 </body>
 </html>
+
+
+
+
