--- a/projects.html
+++ b/projects.html
@@ -37,7 +37,7 @@
         <li class="project"><a href="example1.html">The Basics: Data Types (Work in Progress)</a></br></li>
         <li class="project"><a href="example2.html"> Project 1: Pen and Paper RPG generator (Work in Progress)</a></br></li>
         <li class="project"><a href="example3.html" >Project 2: Slot Machine</a></br></li>
-        <li class="project"><a href="" >Project 3: PHP Forms</a></br></li>
+        <li class="project"><a href="gallery.html" >Project 3: Photoshop carousel</a></br></li>
        <!-- <li class="project"><a href="example5.html" >Project 4: Video Game Review</a></br></li> -->
         <li class="project"><a href="example5.html" >Project 5: News Article</a></br></li>
         <li class="project"><a href="" >Project 6: Pen and Paper RPG Generator with PHP Database</a></br></li>
